# aui

./: AUI.py  pyproject.toml  readme.md
aui/: aui_constants.py  aui_utilities.py  auibar.py  auibook.py  dockart.py  framemanager.py  tabart.py
aui2/: __init__.py  aui_constants.py  aui_switcherdialog.py  aui_utilities.py  auibar.py  auibook.py  dockart.py  framemanager.py  tabart.py  version.py
